ipc/ipdl/test/ipdl/error/inconsistentRC.ipdl
//error: inconsistent refcounted status of type `::mozilla::ipc::SomeRefcountedType`

[RefCounted] using class mozilla::ipc::SomeRefcountedType from "SomeFile.h";
using class mozilla::ipc::SomeRefcountedType from "SomeFile.h";

[ChildProc=any]
protocol inconsistentRC {
child:
  async SomeMessage();
};
